--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
     "react": "^15.4.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
-    "react-router-dom": "next"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "next",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
