--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "next",
+    "react-router-dom": "^4.4.0-alpha.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
